<resources>
    <string name="app_name">Licopedia</string>
    <string name="title_activity_maps">maps_activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Cabecera">Editar Usuario</string>
    <string name="Email"> Email * </string>
    <string name="Usuario"> Usuario * </string>
    <string name="Nombre"> Nombre * </string>
    <string name="Apellidos"> Apellidos * </string>
    <string name="Contraseña"> Contraseña * </string>
    <string name="Repetir_cont"> Repetir Contraseña </string>
    <string name="Aceptar"> Aceptar </string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="Cocteles">CÓCTELES GUARDADOS</string>
    <string name="pref_dark_mode_key">false</string>
    <string name="title_activity_register">Register</string>
    <string name="mostrar_contraseña"><u>Mostrar contraseña</u></string>
</resources>