<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cabecera_EditUsuTexView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Cabecera"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@color/blue_face"

            />

        <TextView
            android:id="@+id/tituloEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Email"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>


        <EditText
            android:id="@+id/casilla_rellenarEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:hint="usario@hotmail.es"

            />

        <TextView
            android:id="@+id/tituloUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Usuario"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>


        <EditText
            android:id="@+id/casilla_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:hint="joe.doe"

            />
        <TextView
            android:id="@+id/tituloNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Nombre"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>


        <EditText
            android:id="@+id/casilla_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:hint="Homer"

            />
        <TextView
            android:id="@+id/tituloApellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Apellidos"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>


        <EditText
            android:id="@+id/casilla_apellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:hint="J. Simpsons"
            />

        <TextView
            android:id="@+id/tituloContraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Contraseña"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>


        <EditText
            android:id="@+id/casilla_contraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:hint="*********"
            />


        <TextView
            android:id="@+id/tituloRepetirContraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Repetir_cont"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>


        <EditText
            android:id="@+id/casilla_repetirContra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:hint="********"

            />


        <Button
            android:id="@+id/boton_aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue_face"
            android:text="@string/Aceptar" />
    </LinearLayout>
</ScrollView>